--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
+  title: My book, Volume One
   content: MyText
 
 two:
-  title: MyString
+  title: My book, Volume Two
   content: MyText
